# Opengl_VoxelEngine

./: .gitignore  CMakeLists.txt  git.txt
engine/: CMakeLists.txt  build.bat  remake.bat
engine/src/: glad.c  main.cpp
engine/src/shaders/: shader.frag
engineExtended/: CMakeLists.txt  ReadME
engineExtended/src/: GLShader.cpp  GLShader.h  main.cpp
engineExtended/src/shaders/: shader.frag
reference_code/: FreeCamera.h  GLSLShader.h  RenderableObject.h  TexturedPlane.cpp
src/: AbstractCamera.cpp  AbstractCamera.h  FreeCamera.cpp  FreeCamera.h  GLSLShader.cpp  GLSLShader.h  TexturedPlane.h  main.cpp  tt.txt
src/shaders/: shader.vert
